fix nav title align

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -36,6 +36,8 @@ img { max-width: 100%; height:auto; }
 input {height: 40px; border: none; }
 select { border: none; }
 
+.title-md { text-align: center; margin-right: 40px;}
+
 .no-padding { padding:0px; }
 .item-md.item-input.input-has-focus .item-inner {
   box-shadow: none;
